@@ -1,3 +1,10 @@
+2010-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/nlib.lisp, src/interp/util.lisp,
+	src/interp/macros.lisp, src/interp/vmlisp.lisp,
+	src/lisp/fricas-lisp.lisp, src/lisp/fricas-package.lisp:
+	Partial support for Poplog.
+
 2010-01-26  Martin Rubey  <martin.rubey@math.uni-hannover.de>
 
 	* src/algebra/numtheor.spad.pamphlet: carmichaelLambda():
